--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
              {{>header}}
+             <p>This site was created by Aman.It uses data from mapbx.com and darksky.net!</p>
         </div>
         <img class="portrait" src="/img/pic1.jpg">
         {{>footer}}
